# clip-win

./: .all-contributorsrc  .gitignore  README.md  issue-clipboard-reliability.md  issue-taskbar-blink.md  package-lock.json  package.json  pr-clipboard-reliability.md  pr-taskbar-blink.md  vite.config.ts
.github/workflows/: release.yml
aur/: PKGBUILD
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/src/: autostart_manager.rs  clipboard_manager.rs  main.rs  user_settings.rs
src/components/: ClipboardTab.tsx  SetupWizard.tsx
src/hooks/: useHistoryKeyboardNavigation.ts
