[package]
name = "win11-clipboard-history-lib"
version = "0.6.5"
description = "A Windows 11-style Clipboard History Manager for Linux"
authors = ["gustavosett"]
license = "MIT"
repository = "https://github.com/gustavosett/Windows-11-Clipboard-History-For-Linux"
edition = "2021"
rust-version = "1.77"

[lib]
name = "win11_clipboard_history_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "win11-clipboard-history-bin"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri Core
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"

# Clipboard Management - wayland-data-control for native Wayland support
arboard = { version = "3.4", features = ["image-data", "wayland-data-control"] }

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Image Handling
image = "0.25"
base64 = "0.22"

# HTTP Client for GIF downloads
reqwest = { version = "0.13", features = ["blocking"] }

# Utilities
once_cell = "1.19"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.21.0", features = ["v4", "v5", "serde"] }
dirs = "6.0"

tauri-plugin-single-instance = "2"

# Global shortcut plugin for cross-platform hotkeys
tauri-plugin-global-shortcut = "2"

# System information
whoami = "2.0"

# URL encoding for LXQt shortcuts
percent-encoding = "2.3"

# X11 Simulation for paste injection
x11rb = { version = "0.13", features = ["allow-unsafe-code", "xtest"] }
libc = "0.2"
gtk = "0.18"
# D-Bus for XDG Desktop Portal (theme detection for COSMIC and other DEs)
zbus = { version = "5", default-features = false, features = ["tokio"] }
futures-lite = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
