[package]
name = "clip-win"
version = "0.6.6"
description = "A Clip-Win History Manager for Linux"
authors = ["gustavosett"]
license = "MIT"
repository = "https://github.com/techlogycs/clip-win"
edition = "2021"
rust-version = "1.77"

[lib]
name = "clip_win"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "clip-win-bin"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
# Tauri Core
tauri = { version = "2.11.0", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"

# Clipboard Management - wayland-data-control for native Wayland support
arboard = { version = "3.4", features = ["image-data", "wayland-data-control"] }

# Async Runtime
tokio = { version = "1.52.2", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Image Handling
image = "0.25.10"
base64 = "0.22"

# HTTP Client for GIF downloads
reqwest = { version = "0.13.3", features = ["blocking"] }

# Utilities
once_cell = "1.21.4"
parking_lot = "0.12"
chrono = { version = "0.4.44", features = ["serde"] }
uuid = { version = "1.23.1", features = ["v4", "v5", "serde"] }
dirs = "6.0"

tauri-plugin-single-instance = "2.4.2"

# Global shortcut plugin for cross-platform hotkeys
tauri-plugin-global-shortcut = "2"

# System information
whoami = "2.1.2"

# URL encoding for LXQt shortcuts
percent-encoding = "2.3"

# X11 Simulation for paste injection
x11rb = { version = "0.13", features = ["allow-unsafe-code", "xtest"] }
libc = "0.2"
gtk = "0.18"
# D-Bus for XDG Desktop Portal (theme detection for COSMIC and other DEs)
zbus = { version = "5.15.0", default-features = false, features = ["tokio"] }
futures-lite = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
